--- a/dom-projects.html
+++ b/dom-projects.html
@@ -3,7 +3,7 @@
   <head>
     <title>DOM Projects</title>
     <style>
-      body{
+      body {
         font-family: Arial;
       }
       
@@ -22,6 +22,20 @@
         background-color: rgb(240, 240, 240);
         color: black;
       }
+
+      .cost-input{
+        padding: 10px;
+        font-size: 15px;
+      }
+
+      .calculate-button{
+        background-color: green;
+        color: white;
+        border: none;
+        font-size: 15px;
+        padding: 12px 15px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -30,8 +44,10 @@
     </button>
     
     <p>Amazon Shipping Calculator</p>
-    <input class="js-cost-input" placeholder="Cost of order" onkeydown="handleCostKeydown(event);">
-    <button onclick="calculateTotal();">Calculate</button>
+    <p>Orders under $40 = +$10 shipping.</p>
+    <p>Orders over $40 = FREE shipping.</p>
+    <input class="js-cost-input cost-input" placeholder="Cost of order" onkeydown="handleCostKeydown (event);"> <!--burda iki class var aradaki bosluk onlari ayirir -->
+    <button onclick="calculateTotal();" class="calculate-button">Calculate</button>
     <p class="js-total-cost"></p>
 
     <script>
